--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -7,6 +7,7 @@
 body {
   margin: 0;
   padding: 0;
+  background: rgb(243,243,243);
 }
 
 .a-link {
@@ -17,4 +18,9 @@ body {
 
 .el-dropdown-link:focus {
   outline: none;
+}
+
+.content-body {
+  margin: 0 auto;
+  padding-top: 5px;
 }
